@@ -3,6 +3,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 Pending
 * Fixes for Coop login.
 * Removes support for Forex Bank due to BankId requirement.
+* Fixes for MinPension login.
 
 v1.9.10.1 (2015-11-22)
 * Update certificate for ICA.
